fix bug and add gtag manager

--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <!-- Google Tag Manager -->
-    <script>
-        (function(w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-W8LP82F');
-    </script>
-    <!-- End Google Tag Manager -->
+<head>    
 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/flok.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Floki DAO is a next generation reserve currency protocol. The DAO uses its protocol controlled value to reward token holders with high yields, while using its treasury reserves to invest in and grow projects" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -42,12 +24,42 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title> Floki DAO | The Peoples DAO </title>
+    <!-- Google Tag Manager -->
+    <!-- <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-W8LP82F');
+    </script> -->
+    <!-- End Google Tag Manager -->
+    <!--Global site tag (gtag.js)- Google Analytics-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TH23TDB0DG"></script>
+    <script>
+        window.dataLayer = window.dataLayer||[];
+        function gtag(){
+          dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-TH23TDB0DG');
+
+    </script>
 </head>
 
 <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W8LP82F"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W8LP82F" -->
+  <!-- height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
     <!-- End Google Tag Manager (noscript) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
